--- a/payment_gateway/pubspec.yaml
+++ b/payment_gateway/pubspec.yaml
@@ -28,7 +28,7 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.1
-  razorpay_flutter: ^1.2.3
+  razorpay_flutter: 1.1.1
   toast: ^0.1.5
 
 dev_dependencies:
